unpackaged/main/default/objects/Partnerships__c/fields/AffiniPay__c.field-meta.xml
<CustomField>
    <fullName>AffiniPay__c</fullName>
    <formula>Partner_Account__r.AffiniPay_VT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field: populated from related Partner Account record - AffiniPay VT external id field.</inlineHelpText>
    <label>AffiniPay VT</label>
    <type>Text</type>
</CustomField>