unpackaged/main/default/objects/Partnerships__c/fields/AffiniPay_VT_ID__c.field-meta.xml
<CustomField>
    <fullName>AffiniPay_VT_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Used for legacy migration purposes only</inlineHelpText>
    <label>AffiniPay VT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>