unpackaged/main/default/objects/Partnerships__c/fields/Affinity_Member_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Member_Bonus__c</fullName>
    <label>Affinity Member Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>