unpackaged/main/default/objects/Partnerships__c/fields/Affinity_Member_Since__c.field-meta.xml
<CustomField>
    <fullName>Affinity_Member_Since__c</fullName>
    <label>Affinity Member Since</label>
    <type>Date</type>
</CustomField>