unpackaged/main/default/objects/Partnerships__c/fields/Brand_txt__c.field-meta.xml
<CustomField>
    <fullName>Brand_txt__c</fullName>
    <formula>TEXT( Brand__c )</formula>
    <label>Brand (txt)</label>
    <type>Text</type>
</CustomField>