unpackaged/main/default/objects/Partnerships__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <label>Certification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>