unpackaged/main/default/objects/Partnerships__c/fields/Certified_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Certified_Professionals__c</fullName>
    <label># Certified Professionals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>