unpackaged/main/default/objects/Partnerships__c/fields/Competitive_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Marketing__c</fullName>
    <label>Competitive Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Selling OK</fullName>
            </value>
            <value>
                <fullName>No Cross-Selling</fullName>
            </value>
            <value>
                <fullName>No Selling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>