unpackaged/main/default/objects/Partnerships__c/fields/Consultant_Effort__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Effort__c</fullName>
    <description>Used on Soluno Partnership object to indicate the level of service provided to the custom from the consultant</description>
    <label>Consultant Effort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral Only</fullName>
            </value>
            <value>
                <fullName>Sales Process Only</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>