unpackaged/main/default/objects/Partnerships__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integrated Vol</fullName>
            </value>
            <value>
                <fullName>Referral Vol</fullName>
            </value>
            <value>
                <fullName>Payment Hybrid</fullName>
            </value>
            <value>
                <fullName>Their Form</fullName>
            </value>
            <value>
                <fullName>Software Leads</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>