unpackaged/main/default/objects/Partnerships__c/fields/Current_Term_End__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_End__c</fullName>
    <label>Current Term End</label>
    <type>Date</type>
</CustomField>