unpackaged/main/default/objects/Partnerships__c/fields/LawPay_Enterprise_Partnership__c.field-meta.xml
<CustomField>
    <fullName>LawPay_Enterprise_Partnership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to TRUE, referral MQLs that come through with this partnership record will route to the Enterprise Team</description>
    <label>LawPay Enterprise Partnership</label>
    <type>Checkbox</type>
</CustomField>