unpackaged/main/default/objects/Partnerships__c/fields/Migration_id__c.field-meta.xml
<CustomField>
    <fullName>Migration_id__c</fullName>
    <externalId>true</externalId>
    <label>Migration id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>