unpackaged/main/default/objects/Partnerships__c/fields/Minimum_Yearly_Spend__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Yearly_Spend__c</fullName>
    <label>Minimum Yearly Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>