unpackaged/main/default/objects/Partnerships__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnerships</relationshipLabel>
    <relationshipName>Partnerships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>