unpackaged/main/default/objects/Partnerships__c/fields/Partner_Account_has_Prohibition__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_has_Prohibition__c</fullName>
    <description>Determines if Partner Account has Partner Software Non-Compete Type of Outbound and Inbound Prohibited. Used in Dynamic Forms</description>
    <formula>IF(ISPICKVAL(Partner_Account__r.Partner_Software_Non_Compete_Type__c, &quot;Outbound and Inbound Prohibited&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Account has Prohibition</label>
    <type>Checkbox</type>
</CustomField>