unpackaged/main/default/objects/Partnerships__c/fields/Partnership_Id__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique value that identifies the partnership record.</inlineHelpText>
    <label>Partnership Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>