unpackaged/main/default/objects/Partnerships__c/fields/Partnership_ID_Case_Safe__c.field-meta.xml
<CustomField>
    <fullName>Partnership_ID_Case_Safe__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership ID (Case Safe)</label>
    <type>Text</type>
</CustomField>