unpackaged/main/default/objects/Partnerships__c/fields/PartnerStack_Partner_Key__c.field-meta.xml
<CustomField>
    <fullName>PartnerStack_Partner_Key__c</fullName>
    <description>Brings down the Partner Stack ID when Partnership is Partner Stack</description>
    <formula>IF( RecordType.DeveloperName = &quot;Partner Stack&quot;,  Partner_Account__r.PartnerStack_Partner_Key__c , &quot;&quot;)</formula>
    <label>PartnerStack Partner Key</label>
    <type>Text</type>
</CustomField>