unpackaged/main/default/objects/Partnerships__c/fields/Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Referral_Token__c</fullName>
    <inlineHelpText>The token used to identify the partner; used by marketing and for inbound lead to identify which partner referred the lead.</inlineHelpText>
    <label>Referral Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>