unpackaged/main/default/objects/Partnerships__c/fields/Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share__c</fullName>
    <label>Rev. Share (%)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>