unpackaged/main/default/objects/Partnerships__c/fields/Rev_Share_Direction__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share_Direction__c</fullName>
    <label>Rev Share Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>