unpackaged/main/default/objects/Partnerships__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>This field represents the partnership stage.</description>
    <inlineHelpText>The stage of the partnership.</inlineHelpText>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reviewing</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>On hold</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>