unpackaged/main/default/objects/Partnerships__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Launching</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Low-Activity</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Defunct</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>COMPETITOR</fullName>
                <isActive>false</isActive>
                <label>COMPETITOR</label>
            </value>
            <value>
                <fullName>Defunct_Low_Activity</fullName>
                <isActive>false</isActive>
                <label>Defunct_Low_Activity</label>
            </value>
            <value>
                <fullName>Informal</fullName>
                <isActive>false</isActive>
                <label>Informal</label>
            </value>
            <value>
                <fullName>Prelaunch</fullName>
                <isActive>false</isActive>
                <label>Prelaunch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>