unpackaged/main/default/objects/Partnerships__c/recordTypes/Affinity.recordType-meta.xml
<RecordType>
    <fullName>Affinity</fullName>
    <active>true</active>
    <description>Trade organization/professional society organization</description>
    <label>Affinity</label>
</RecordType>