unpackaged/main/default/objects/Partnerships__c/recordTypes/Alliance_Insustry_Referral_only.recordType-meta.xml
<RecordType>
    <fullName>Alliance_Insustry_Referral_only</fullName>
    <active>true</active>
    <description>Other business operating in our verticals- non-consultant referral partnership</description>
    <label>Alliance (Industry/Referral-only)</label>
</RecordType>