unpackaged/main/default/objects/Partnerships__c/recordTypes/Consultant.recordType-meta.xml
<RecordType>
    <fullName>Consultant</fullName>
    <active>true</active>
    <description>Technology professionals with clients in our verticals</description>
    <label>Consultant</label>
</RecordType>