unpackaged/main/default/objects/Partnerships__c/recordTypes/ISV_Partner.recordType-meta.xml
<RecordType>
    <fullName>ISV_Partner</fullName>
    <active>true</active>
    <description>Software company with products/customers in our verticals (Tech Partners)</description>
    <label>ISV Partner</label>
</RecordType>