unpackaged/main/default/objects/Partnerships__c/recordTypes/Partner_Stack.recordType-meta.xml
<RecordType>
    <fullName>Partner_Stack</fullName>
    <active>true</active>
    <description>Used only for tracking Partners from Partnerstack</description>
    <label>Partner Stack</label>
</RecordType>