unpackaged/main/default/objects/Partnerships__c/recordTypes/VAR.recordType-meta.xml
<RecordType>
    <fullName>VAR</fullName>
    <active>true</active>
    <description>Value-Added Reseller</description>
    <label>VAR</label>
</RecordType>