unpackaged/main/default/objects/Partnerships__c/listViews/Affinity_Partnerships.listView-meta.xml
<ListView>
    <fullName>Affinity_Partnerships</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Partnership_Id__c</columns>
    <columns>Brand__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partnerships__c.Affinity</value>
    </filters>
    <label>Affinity Partnerships</label>
</ListView>