unpackaged/main/default/objects/Partnerships__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Partnership_Id__c</columns>
    <columns>Brand__c</columns>
    <columns>Status__c</columns>
    <columns>Level__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Current_Term_End__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Agreement_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>