unpackaged/main/default/objects/Partnerships__c/listViews/ISV_Partnerships.listView-meta.xml
<ListView>
    <fullName>ISV_Partnerships</fullName>
    <columns>NAME</columns>
    <columns>Partner_Account__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Brand__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partnerships__c.ISV_Partner</value>
    </filters>
    <label>ISV Partnerships</label>
</ListView>