unpackaged/main/default/objects/Partnerships__c/listViews/Soluno_Partnerships.listView-meta.xml
<ListView>
    <fullName>Soluno_Partnerships</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Brand__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>Soluno</value>
    </filters>
    <label>Soluno Consultants</label>
</ListView>